--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Version : V.1.0
 
     </header>
 
-    <div id="conteneur">
+    <div class="conteneur">
 
         <aside>
             <nav id="nav_vert">
@@ -80,12 +80,15 @@ Version : V.1.0
             </nav>
 
         </aside>
-        <main id="produit">
+        <main class="produit">
 
-            <div id="newl">
-                <p id="paccueil">nouveau modèle "Kamel dream" </p>
+            <div class="newl">
+                <img src="css/img/image_accueil.jpg" alt="image1">
+                <p class="paccueil">nouveau modèle "Kamel dream" </p>
             </div>
-            <div id="modelnew"></div>
+            <div class="modelnew">
+                <img src="css/img/image_accueil2.png" alt="image 2">
+            </div>
 
         </main>
 
@@ -95,6 +98,7 @@ Version : V.1.0
 
 </body>
 <footer>
+    <p>footer</p>
 
 </footer>
 
