--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Version : V.1.0
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">connexion</a>
+                            <a class="nav-link active" aria-current="page" href="connexion.html">connexion</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Panier</a>
