--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Version : V.1.0
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand " href="#"><strong>Kamel Eye Wear</strong>  </a>
+                <a class="navbar-brand " href="index.html"><strong>Kamel Eye Wear</strong>  </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
